* Wed Feb 01 2017 - version 0.3.0
- Support for commands with same prefixes
- Add plugin for muting the bot, affects dokuwiki, mailing lists, web news and blog RSS
- DokuWiki: find out page maintainers and ping them
- URL marker: use only the first <title> tag

* Fri Nov 25 2016 - version 0.2.0
- Plugin OutageReport replaced by plugin MailingLists which can check multiple
  lists. Configuration section :outage_list is renamed to :mailing_lists.
- Plugin DokuWiki to monitor recents changes in a wiki
- Plugin BlogFeed to announce new blog posts
- URL: marker
  - support and limit redirects, max size and content type
  - remove line breaks
  - show target URL only if it differs from the input (when it was redirected)
- Plugin KeepNick renames the bot if its name is changed
- TemplateLogger: fix time zone transition
- DokuWiki: support for multiple wikis
- Use haveapi-client v0.7

* Sat Aug 27 2016 - version 0.1.0
- Initial release